--- a/packages/components/s-clipboard-copy-component/package.json
+++ b/packages/components/s-clipboard-copy-component/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "@coffeekraken/s-clipboard-copy-component",
-  "version": "2.0.0",
-  "description": "",
-  "homepage": "https://coffeekraken.io",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "dev": "sugar frontstack dev",
-    "build": "sugar frontstack build",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@coffeekraken/s-lit-component": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0",
-    "lit": "^2.0.0-rc.3"
-  },
-  "main": "dist/pkg/cjs/js/exports.js",
-  "module": "dist/pkg/esm/js/exports.js",
-  "exports": {
-    ".": {
-      "require": "./dist/pkg/cjs/js/exports.js",
-      "import": "./dist/pkg/esm/js/exports.js"
+    "name": "@coffeekraken/s-clipboard-copy-component",
+    "version": "2.0.0",
+    "description": "",
+    "homepage": "https://coffeekraken.io",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "dev": "sugar frontstack dev",
+        "build": "sugar frontstack build",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "@coffeekraken/s-lit-component": "^2.0.0",
+        "@coffeekraken/sugar": "^2.0.0",
+        "lit": "^2.0.0-rc.3"
+    },
+    "main": "./dist/pkg/cjs/js/exports.js",
+    "module": "./dist/pkg/esm/js/exports.js",
+    "exports": {
+        ".": {
+            "require": "./dist/pkg/cjs/js/exports.js",
+            "import": "./dist/pkg/esm/js/exports.js"
+        }
     }
-  }
 }
