--- a/packages/core/s-stdio/package.json
+++ b/packages/core/s-stdio/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "@coffeekraken/s-stdio",
-  "version": "2.0.0",
-  "description": "",
-  "scripts": {},
-  "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
-  "license": "MIT",
-  "dependencies": {
-    "@coffeekraken/s-class": "^2.0.0",
-    "@coffeekraken/s-duration": "^2.0.0",
-    "@coffeekraken/s-event-emitter": "^2.0.0",
-    "@coffeekraken/s-interface": "^2.0.0",
-    "@coffeekraken/s-log": "^2.0.0",
-    "@coffeekraken/s-promise": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0",
-    "enquirer": "^2.3.6",
-    "inquirer": "^8.2.0",
-    "minimatch": "^3.0.4",
-    "neo-blessed": "^0.2.0",
-    "ora": "^6.0.1",
-    "stack-trace": "0.0.10",
-    "terminal-kit": "^2.0.7"
-  },
-  "main": "dist/pkg/cjs/node/exports.js",
-  "module": "dist/pkg/esm/node/exports.js",
-  "exports": {
-    ".": {
-      "require": "./dist/pkg/cjs/node/exports.js",
-      "import": "./dist/pkg/esm/node/exports.js"
+    "name": "@coffeekraken/s-stdio",
+    "version": "2.0.0",
+    "description": "",
+    "scripts": {},
+    "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
+    "license": "MIT",
+    "dependencies": {
+        "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-duration": "^2.0.0",
+        "@coffeekraken/s-event-emitter": "^2.0.0",
+        "@coffeekraken/s-interface": "^2.0.0",
+        "@coffeekraken/s-log": "^2.0.0",
+        "@coffeekraken/s-promise": "^2.0.0",
+        "@coffeekraken/sugar": "^2.0.0",
+        "enquirer": "^2.3.6",
+        "inquirer": "^8.2.0",
+        "minimatch": "^3.0.4",
+        "neo-blessed": "^0.2.0",
+        "ora": "^6.0.1",
+        "stack-trace": "0.0.10",
+        "terminal-kit": "^2.0.7"
+    },
+    "main": "./dist/pkg/cjs/shared/exports.js",
+    "module": "./dist/pkg/esm/shared/exports.js",
+    "exports": {
+        ".": {
+            "require": "./dist/pkg/cjs/node/exports.js",
+            "import": "./dist/pkg/esm/node/exports.js"
+        }
     }
-  }
 }
