--- a/packages/core/s-sugar-json/package.json
+++ b/packages/core/s-sugar-json/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "@coffeekraken/s-sugar-json",
-  "version": "2.0.0",
-  "description": "",
-  "scripts": {},
-  "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
-  "license": "MIT",
-  "dependencies": {
-    "@coffeekraken/s-class": "^2.0.0",
-    "@coffeekraken/s-duration": "^2.0.0",
-    "@coffeekraken/s-event-emitter": "^2.0.0",
-    "@coffeekraken/s-interface": "^2.0.0",
-    "@coffeekraken/s-promise": "^2.0.0",
-    "@coffeekraken/s-frontstack": "^2.0.0",
-    "@coffeekraken/s-glob": "^2.0.0",
-    "@coffeekraken/s-log": "^2.0.0",
-    "@coffeekraken/s-stdio": "^2.0.0",
-    "@coffeekraken/s-bench": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0",
-    "stack-trace": "0.0.10"
-  },
-  "main": "dist/pkg/cjs/node/exports.js",
-  "module": "dist/pkg/esm/node/exports.js",
-  "exports": {
-    ".": {
-      "require": "./dist/pkg/cjs/node/exports.js",
-      "import": "./dist/pkg/esm/node/exports.js"
+    "name": "@coffeekraken/s-sugar-json",
+    "version": "2.0.0",
+    "description": "",
+    "scripts": {},
+    "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
+    "license": "MIT",
+    "dependencies": {
+        "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-duration": "^2.0.0",
+        "@coffeekraken/s-event-emitter": "^2.0.0",
+        "@coffeekraken/s-interface": "^2.0.0",
+        "@coffeekraken/s-promise": "^2.0.0",
+        "@coffeekraken/s-frontstack": "^2.0.0",
+        "@coffeekraken/s-glob": "^2.0.0",
+        "@coffeekraken/s-log": "^2.0.0",
+        "@coffeekraken/s-stdio": "^2.0.0",
+        "@coffeekraken/s-bench": "^2.0.0",
+        "@coffeekraken/sugar": "^2.0.0",
+        "stack-trace": "0.0.10"
+    },
+    "main": "./dist/pkg/cjs/node/exports.js",
+    "module": "./dist/pkg/esm/node/exports.js",
+    "exports": {
+        ".": {
+            "require": "./dist/pkg/cjs/node/exports.js",
+            "import": "./dist/pkg/esm/node/exports.js"
+        }
     }
-  }
 }
