--- a/packages/features/s-activate-feature/package.json
+++ b/packages/features/s-activate-feature/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "@coffeekraken/s-activate-feature",
-  "version": "2.0.0",
-  "description": "",
-  "scripts": {
-    "dev": "sugar frontstack dev",
-    "build": "sugar frontstack build",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
-  "license": "MIT",
-  "dependencies": {
-    "@coffeekraken/s-feature": "^2.0.0",
-    "@coffeekraken/s-class": "^2.0.0",
-    "@coffeekraken/s-interface": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0"
-  },
-  "main": "dist/pkg/cjs/js/exports.js",
-  "module": "dist/pkg/esm/js/exports.js",
-  "exports": {
-    ".": {
-      "require": "./dist/pkg/cjs/js/exports.js",
-      "import": "./dist/pkg/esm/js/exports.js"
+    "name": "@coffeekraken/s-activate-feature",
+    "version": "2.0.0",
+    "description": "",
+    "scripts": {
+        "dev": "sugar frontstack dev",
+        "build": "sugar frontstack build",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
+    "license": "MIT",
+    "dependencies": {
+        "@coffeekraken/s-feature": "^2.0.0",
+        "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-interface": "^2.0.0",
+        "@coffeekraken/sugar": "^2.0.0"
+    },
+    "main": "./dist/pkg/cjs/js/exports.js",
+    "module": "./dist/pkg/esm/js/exports.js",
+    "exports": {
+        ".": {
+            "require": "./dist/pkg/cjs/js/exports.js",
+            "import": "./dist/pkg/esm/js/exports.js"
+        }
     }
-  }
 }
