--- a/packages/tools/s-color/package.json
+++ b/packages/tools/s-color/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "@coffeekraken/s-color",
-  "version": "2.0.0",
-  "description": "",
-  "scripts": {},
-  "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
-  "license": "MIT",
-  "dependencies": {
-    "@coffeekraken/s-class": "^2.0.0",
-    "@coffeekraken/s-interface": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0",
-    "@csstools/convert-colors": "^2.0.0"
-  },
-  "main": "dist/pkg/cjs/shared/exports.js",
-  "module": "dist/pkg/esm/shared/exports.js",
-  "exports": {
-    ".": {
-      "require": "./dist/pkg/cjs/shared/exports.js",
-      "import": "./dist/pkg/esm/shared/exports.js"
+    "name": "@coffeekraken/s-color",
+    "version": "2.0.0",
+    "description": "",
+    "scripts": {},
+    "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
+    "license": "MIT",
+    "dependencies": {
+        "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-interface": "^2.0.0",
+        "@coffeekraken/sugar": "^2.0.0",
+        "@csstools/convert-colors": "^2.0.0"
+    },
+    "main": "./dist/pkg/cjs/shared/exports.js",
+    "module": "./dist/pkg/esm/shared/exports.js",
+    "exports": {
+        ".": {
+            "require": "./dist/pkg/cjs/shared/exports.js",
+            "import": "./dist/pkg/esm/shared/exports.js"
+        }
     }
-  }
 }
