--- a/packages/servers/s-frontend-server/package.json
+++ b/packages/servers/s-frontend-server/package.json
@@ -15,16 +15,16 @@
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-docblock": "^2.0.0",
         "@coffeekraken/s-docblock-renderer": "^2.0.0",
-        "@coffeekraken/s-file": "^2.0.0",
         "@coffeekraken/s-docmap": "^2.0.0",
         "@coffeekraken/s-duration": "^2.0.0",
-        "@coffeekraken/s-log": "^2.0.0",
-        "@coffeekraken/s-glob": "^2.0.0",
-        "@coffeekraken/s-markdown-builder": "^2.0.0",
         "@coffeekraken/s-env": "^2.0.0",
+        "@coffeekraken/s-file": "^2.0.0",
+        "@coffeekraken/s-glob": "^2.0.0",
+        "@coffeekraken/s-log": "^2.0.0",
+        "@coffeekraken/s-markdown-builder": "^2.0.0",
         "@coffeekraken/s-process": "^2.0.0",
-        "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/s-promise": "^2.0.0",
+        "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/s-view-renderer": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
         "compression": "^1.7.4",
@@ -34,6 +34,7 @@
         "marked": "^2.1.3",
         "mime-types": "^2.1.30",
         "minimatch": "^3.0.4",
+        "recursive-copy": "^2.0.14",
         "sails": "^1.4.2",
         "serve-static": "^1.14.1",
         "vhost": "^3.0.2"
