--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -42,7 +42,6 @@
         "@coffeekraken/s-duration": "^2.0.0",
         "@coffeekraken/s-event-emitter": "^2.0.0",
         "@coffeekraken/s-file": "^2.0.0",
-        "@coffeekraken/s-sugar-element": "^2.0.0",
         "@coffeekraken/s-glob": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
@@ -50,6 +49,7 @@
         "@coffeekraken/s-promise": "^2.0.0",
         "@coffeekraken/s-stdio": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
+        "@coffeekraken/s-sugar-element": "^2.0.0",
         "@coffeekraken/s-sugar-json": "^2.0.0",
         "@coffeekraken/s-view-renderer": "^2.0.0",
         "@coffeekraken/s-vite": "^2.0.0",
@@ -61,6 +61,7 @@
         "app-root-path": "^3.0.0",
         "astring": "^1.7.0",
         "atob": "^2.1.2",
+        "bezier-easing": "^2.1.0",
         "blessed": "^0.1.81",
         "btoa": "^1.2.1",
         "caller-callsite": "^4.1.0",
