--- a/packages/core/s-package/package.json
+++ b/packages/core/s-package/package.json
@@ -9,6 +9,7 @@
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-glob": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
+        "@coffeekraken/s-markdown-builder": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
