--- a/packages/core/s-event-emitter/package.json
+++ b/packages/core/s-event-emitter/package.json
@@ -9,7 +9,8 @@
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
-        "node-ipc": "^10.1.0"
+        "node-ipc": "^10.1.0",
+        "strong-type": "^1.1.0"
     },
     "devDependencies": {},
     "main": "./dist/pkg/cjs/shared/exports.js",
