--- a/packages/builders/s-sitemap-builder/package.json
+++ b/packages/builders/s-sitemap-builder/package.json
@@ -9,6 +9,8 @@
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-duration": "^2.0.0",
         "@coffeekraken/s-event-emitter": "^2.0.0",
+        "@coffeekraken/s-glob": "^2.0.0",
+        "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/s-promise": "^2.0.0",
         "@coffeekraken/s-stdio": "^2.0.0",
