--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -77,6 +77,7 @@
         "@coffeekraken/s-url": "^2.0.0",
         "@coffeekraken/s-view-renderer": "^2.0.0",
         "@coffeekraken/s-vite": "^2.0.0",
+        "@coffeekraken/s-dashboard": "^2.0.0",
         "@coffeekraken/s-vite-postcss-plugin": "^2.0.0",
         "@coffeekraken/s-vite-sugar-plugin": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
