--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -89,6 +89,7 @@
         "esm": "^3.2.25",
         "faker": "^5.5.3",
         "fast-safe-stringify": "^2.0.8",
+        "fast-xml-parser": "^4.0.7",
         "fastdom": "^1.0.9",
         "filesize": "^6.1.0",
         "find-in-files": "^0.5.0",
@@ -113,6 +114,7 @@
         "is-glob": "^4.0.1",
         "is-plain-object": "^5.0.0",
         "is-valid-path": "^0.1.1",
+        "js-string-compression": "^1.0.1",
         "json-cyclic": "^1.0.2",
         "keypress": "^0.2.1",
         "lodash.clone": "^4.5.0",
@@ -149,6 +151,7 @@
         "url-parse": "^1.4.7",
         "url-slug": "^3.0.2",
         "uuid": "^8.3.2",
+        "xml2json": "^0.12.0",
         "yaml": "^1.10.2",
         "yargs": "^17.0.1"
     },
