--- a/packages/core/s-config/package.json
+++ b/packages/core/s-config/package.json
@@ -7,7 +7,8 @@
     "license": "MIT",
     "dependencies": {
         "@coffeekraken/sugar": "^2.0.0",
-        "@coffeekraken/s-env": "^2.0.0"
+        "@coffeekraken/s-env": "^2.0.0",
+        "@coffeekraken/s-typescript-builder": "^2.0.0"
     },
     "devDependencies": {},
     "main": "./dist/pkg/cjs/shared/exports.js",
