--- a/packages/components/s-code-example-component/package.json
+++ b/packages/components/s-code-example-component/package.json
@@ -14,6 +14,7 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "0": "@coffeekraken/s-interface",
         "@coffeekraken/s-clipboard-copy-component": "^2.0.0",
         "@coffeekraken/s-lit-component": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
