--- a/packages/core/s-package/package.json
+++ b/packages/core/s-package/package.json
@@ -9,11 +9,13 @@
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-glob": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
-        "@coffeekraken/s-markdown-builder": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
+        "@coffeekraken/s-markdown-builder": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
-        "chokidar": "^3.5.3"
+        "chokidar": "^3.5.3",
+        "depcheck": "^1.4.3",
+        "dependency-cruiser": "^11.7.1"
     },
     "main": "./dist/pkg/cjs/node/exports.js",
     "module": "./dist/pkg/esm/node/exports.js",
