--- a/packages/renderers/s-view-renderer-engine-twig/package.json
+++ b/packages/renderers/s-view-renderer-engine-twig/package.json
@@ -11,6 +11,7 @@
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
         "exec-php": "^0.0.5",
+        "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-promise": "^2.0.0"
     },
     "main": "./dist/pkg/cjs/node/exports.js",
