--- a/packages/features/s-form-validate-feature/package.json
+++ b/packages/features/s-form-validate-feature/package.json
@@ -15,6 +15,7 @@
     "@coffeekraken/s-feature": "^2.0.0",
     "@coffeekraken/s-interface": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
+    "@coffeekraken/s-validator": "^2.0.0",
     "@sideway/address": "^4.1.2",
     "joi": "^17.4.2",
     "@coffeekraken/s-component-utils": "^2.0.0"
