--- a/packages/tools/s-validator/package.json
+++ b/packages/tools/s-validator/package.json
@@ -8,6 +8,7 @@
     "license": "MIT",
     "dependencies": {
         "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0"
     },
     "main": "./dist/pkg/cjs/shared/exports.js",
