--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "*.css": "postcss"
     },
     "editor.codeActionsOnSave": {
+        "source.organizeImports": true,
         "source.fixAll.eslint": false
     },
     "editor.formatOnPaste": true,
