--- a/packages/app/s-frontstack/package.json
+++ b/packages/app/s-frontstack/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@coffeekraken/s-frontstack",
-    "version": "2.0.0-alpha.0",
+    "version": "2.0.0",
     "description": "",
     "type": "module",
     "scripts": {
