--- a/packages/builders/s-markdown-builder/package.json
+++ b/packages/builders/s-markdown-builder/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@coffeekraken/s-markdown-builder",
-    "version": "2.0.0-alpha.0",
+    "version": "2.0.0",
     "description": "",
     "type": "module",
     "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
