--- a/packages/components/s-scroll-component/package.json
+++ b/packages/components/s-scroll-component/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@coffeekraken/s-scroll-component",
-    "version": "2.0.0-alpha.0",
+    "version": "2.0.0",
     "description": "",
     "homepage": "https://coffeekraken.io",
     "type": "module",
