--- a/packages/features/s-floating-feature/package.json
+++ b/packages/features/s-floating-feature/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@coffeekraken/s-floating-feature",
-    "version": "2.0.0-alpha.0",
+    "version": "2.0.0",
     "description": "",
     "type": "module",
     "scripts": {
