--- a/packages/tools/s-component-utils/package.json
+++ b/packages/tools/s-component-utils/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@coffeekraken/s-component-utils",
-    "version": "2.0.0-alpha.0",
+    "version": "2.0.0",
     "description": "",
     "type": "module",
     "homepage": "https://coffeekraken.io",
