--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@coffeekraken/sugar",
     "description": "A little sugar in your codebase",
-    "version": "2.0.0-alpha.0",
+    "version": "2.0.0",
     "type": "module",
     "exports": {
         "./shared/*": {
