--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -49,6 +49,7 @@
         "@coffeekraken/s-glob": "^2.0.0",
         "@coffeekraken/s-handlebars": "^2.0.0",
         "@coffeekraken/s-images-builder": "^2.0.0",
+        "@coffeekraken/s-inline-feature": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/s-lit-component": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
