--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -56,6 +56,7 @@
         "@coffeekraken/s-vite": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
         "@csstools/convert-colors": "^2.0.0",
+        "@floating-ui/dom": "^0.5.4",
         "@types/blessed": "^0.1.17",
         "abstract-syntax-tree": "^2.17.2",
         "acorn-loose": "^8.0.2",
@@ -108,6 +109,7 @@
         "glob-parent": "^5.1.2",
         "hash-obj": "^4.0.0",
         "hotkeys-js": "^3.8.1",
+        "import": "^0.0.6",
         "in-view": "^0.6.1",
         "in-viewport": "^3.6.0",
         "inline-style-prefixer": "^6.0.0",
