--- a/packages/builders/s-images-builder/package.json
+++ b/packages/builders/s-images-builder/package.json
@@ -21,7 +21,8 @@
         "@coffeekraken/sugar": "^2.0.0",
         "image-size": "^1.0.0",
         "minimatch": "^5.1.0",
-        "sharp": "^0.30.3"
+        "sharp": "^0.30.3",
+        "svgo": "^2.8.0"
     },
     "main": "./dist/pkg/cjs/node/exports.js",
     "module": "./dist/pkg/esm/node/exports.js",
