--- a/packages/@websites/coffeekraken-io/package.json
+++ b/packages/@websites/coffeekraken-io/package.json
@@ -61,6 +61,7 @@
         "@coffeekraken/s-process": "^2.0.0",
         "@coffeekraken/s-promise": "^2.0.0",
         "@coffeekraken/s-range-component": "^2.0.0",
+        "@coffeekraken/s-rating-component": "^2.0.0",
         "@coffeekraken/s-refocus-feature": "^2.0.0",
         "@coffeekraken/s-request": "^2.0.0",
         "@coffeekraken/s-scroll-component": "^2.0.0",
@@ -84,6 +85,7 @@
         "@coffeekraken/sugar": "^2.0.0",
         "animejs": "^3.2.1",
         "canvas": "^2.9.0",
+        "firebase": "^9.9.0",
         "http-server": "^14.0.0",
         "lit-element": "^2.5.1",
         "minisearch": "^3.0.4",
