--- a/packages/builders/s-static-builder/package.json
+++ b/packages/builders/s-static-builder/package.json
@@ -28,8 +28,8 @@
         "postcss-property-lookup": "^3.0.0",
         "purgecss": "^4.0.3"
     },
-    "main": "dist/pkg/cjs/node/exports.js",
-    "module": "dist/pkg/esm/node/exports.js",
+    "main": "./dist/pkg/cjs/node/exports.js",
+    "module": "./dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
