--- a/packages/components/s-scroll-component/package.json
+++ b/packages/components/s-scroll-component/package.json
@@ -19,8 +19,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "lit": "^2.0.0-rc.3"
     },
-    "main": "dist/pkg/cjs/js/exports.js",
-    "module": "dist/pkg/esm/js/exports.js",
+    "main": "./dist/pkg/cjs/js/exports.js",
+    "module": "./dist/pkg/esm/js/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/js/exports.js",
