--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -96,8 +96,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "dotenv": "^16.0.1"
     },
-    "main": "dist/pkg/cjs/cli/exports.js",
-    "module": "dist/pkg/esm/cli/exports.js",
+    "main": "./dist/pkg/cjs/cli/exports.js",
+    "module": "./dist/pkg/esm/cli/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/cli/exports.js",
