--- a/packages/@websites/coffeekraken-io/package.json
+++ b/packages/@websites/coffeekraken-io/package.json
@@ -95,5 +95,19 @@
     },
     "devDependencies": {
         "esbuild": "^0.13.13"
+    },
+    "exports": {
+        "./shared/*": {
+            "require": "./dist/pkg/cjs/shared/*.js",
+            "import": "./dist/pkg/esm/shared/*.js"
+        },
+        "./node/*": {
+            "require": "./dist/pkg/cjs/node/*.js",
+            "import": "./dist/pkg/esm/node/*.js"
+        },
+        "./js/*": {
+            "require": "./dist/pkg/cjs/js/*.js",
+            "import": "./dist/pkg/esm/js/*.js"
+        }
     }
 }
