--- a/packages/app/s-kitchen/package.json
+++ b/packages/app/s-kitchen/package.json
@@ -27,8 +27,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "recursive-copy": "^2.0.14"
     },
-    "main": "dist/pkg/cjs/node/exports.js",
-    "module": "dist/pkg/esm/node/exports.js",
+    "main": "./dist/pkg/cjs/node/exports.js",
+    "module": "./dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
