--- a/packages/components/s-date-picker-component/package.json
+++ b/packages/components/s-date-picker-component/package.json
@@ -21,8 +21,8 @@
         "dateformat": "^5.0.3",
         "lit": "^2.0.0-rc.3"
     },
-    "main": "dist/pkg/cjs/js/exports.js",
-    "module": "dist/pkg/esm/js/exports.js",
+    "main": "./dist/pkg/cjs/js/exports.js",
+    "module": "./dist/pkg/esm/js/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/js/exports.js",
