--- a/packages/components/s-slider-component/package.json
+++ b/packages/components/s-slider-component/package.json
@@ -20,8 +20,8 @@
         "lit": "^2.0.0-rc.3",
         "swiper": "^8.0.6"
     },
-    "main": "dist/pkg/cjs/js/exports.js",
-    "module": "dist/pkg/esm/js/exports.js",
+    "main": "./dist/pkg/cjs/js/exports.js",
+    "module": "./dist/pkg/esm/js/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/js/exports.js",
