--- a/packages/core/s-event-emitter/package.json
+++ b/packages/core/s-event-emitter/package.json
@@ -11,8 +11,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "node-ipc": "^10.1.0"
     },
-    "main": "dist/pkg/cjs/js/exports.js",
-    "module": "dist/pkg/esm/js/exports.js",
+    "main": "./dist/pkg/cjs/js/exports.js",
+    "module": "./dist/pkg/esm/shared/exports.js",
     "exports": {
         "node": {
             "require": "./dist/pkg/cjs/node/exports.js",
@@ -21,6 +21,18 @@
         "default": {
             "require": "./dist/pkg/cjs/js/exports.js",
             "import": "./dist/pkg/esm/js/exports.js"
+        },
+        "./shared/*": {
+            "require": "./dist/pkg/cjs/shared/*.js",
+            "import": "./dist/pkg/esm/shared/*.js"
+        },
+        "./node/*": {
+            "require": "./dist/pkg/cjs/node/*.js",
+            "import": "./dist/pkg/esm/node/*.js"
+        },
+        "./js/*": {
+            "require": "./dist/pkg/cjs/js/*.js",
+            "import": "./dist/pkg/esm/js/*.js"
         }
     }
 }
