--- a/packages/core/s-monorepo/package.json
+++ b/packages/core/s-monorepo/package.json
@@ -20,8 +20,8 @@
         "@coffeekraken/s-vite": "^2.0.0-alpha.9",
         "@coffeekraken/sugar": "^2.0.0-alpha.9"
     },
-    "main": "dist/pkg/cjs/node/exports.js",
-    "module": "dist/pkg/esm/node/exports.js",
+    "main": "./dist/pkg/cjs/node/exports.js",
+    "module": "./dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
