--- a/packages/core/s-package/package.json
+++ b/packages/core/s-package/package.json
@@ -19,8 +19,8 @@
         "dependency-cruiser": "^11.7.1",
         "glob": "^8.0.3"
     },
-    "main": "dist/pkg/cjs/node/exports.js",
-    "module": "dist/pkg/esm/node/exports.js",
+    "main": "./dist/pkg/cjs/node/exports.js",
+    "module": "./dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
