--- a/packages/features/s-appear-feature/package.json
+++ b/packages/features/s-appear-feature/package.json
@@ -18,8 +18,8 @@
         "@coffeekraken/s-theme": "^2.0.0-alpha.9",
         "@coffeekraken/sugar": "^2.0.0-alpha.9"
     },
-    "main": "dist/pkg/cjs/js/exports.js",
-    "module": "dist/pkg/esm/js/exports.js",
+    "main": "./dist/pkg/cjs/js/exports.js",
+    "module": "./dist/pkg/esm/js/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/js/exports.js",
