--- a/packages/http/s-request/package.json
+++ b/packages/http/s-request/package.json
@@ -11,8 +11,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "axios": "^0.21.1"
     },
-    "main": "dist/pkg/cjs/shared/exports.js",
-    "module": "dist/pkg/esm/shared/exports.js",
+    "main": "./dist/pkg/cjs/shared/exports.js",
+    "module": "./dist/pkg/esm/shared/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/shared/exports.js",
