--- a/packages/tools/s-duration/package.json
+++ b/packages/tools/s-duration/package.json
@@ -8,8 +8,8 @@
     "dependencies": {
         "@coffeekraken/sugar": "^2.0.0-alpha.9"
     },
-    "main": "dist/pkg/cjs/shared/exports.js",
-    "module": "dist/pkg/esm/shared/exports.js",
+    "main": "./dist/pkg/cjs/shared/exports.js",
+    "module": "./dist/pkg/esm/shared/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/shared/exports.js",
