--- a/packages/builders/s-favicon-builder/package.json
+++ b/packages/builders/s-favicon-builder/package.json
@@ -21,8 +21,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "favicons": "^6.2.2"
     },
-    "main": "./dist/pkg/cjs/node/exports.js",
-    "module": "./dist/pkg/esm/node/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
