--- a/packages/builders/s-postcss-builder/package.json
+++ b/packages/builders/s-postcss-builder/package.json
@@ -31,8 +31,8 @@
         "purgecss": "^4.0.3",
         "purgecss-from-html": "^4.1.1"
     },
-    "main": "./dist/pkg/cjs/node/exports.js",
-    "module": "./dist/pkg/esm/node/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
