--- a/packages/core/s-frontspec/package.json
+++ b/packages/core/s-frontspec/package.json
@@ -19,8 +19,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "glob": "^7.1.6"
     },
-    "main": "./dist/pkg/cjs/node/exports.js",
-    "module": "./dist/pkg/esm/node/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
