--- a/packages/core/s-stdio/package.json
+++ b/packages/core/s-stdio/package.json
@@ -15,8 +15,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "enquirer": "^2.3.6"
     },
-    "main": "./dist/pkg/cjs/shared/exports.js",
-    "module": "./dist/pkg/esm/shared/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
