--- a/packages/renderers/s-view-renderer-engine-lit/package.json
+++ b/packages/renderers/s-view-renderer-engine-lit/package.json
@@ -12,8 +12,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "@lit-labs/ssr": "^2.2.0"
     },
-    "main": "./dist/pkg/cjs/node/exports.js",
-    "module": "./dist/pkg/esm/node/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
