--- a/packages/builders/s-typescript-builder/package.json
+++ b/packages/builders/s-typescript-builder/package.json
@@ -19,8 +19,8 @@
         "chokidar": "^3.5.3",
         "typescript": "^4.6.3"
     },
-    "main": "./dist/pkg/cjs/node/exports.js",
-    "module": "./dist/pkg/esm/node/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
