--- a/packages/codeFormatters/s-code-formatter/package.json
+++ b/packages/codeFormatters/s-code-formatter/package.json
@@ -15,8 +15,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "chokidar": "^3.5.3"
     },
-    "main": "./dist/pkg/cjs/node/exports.js",
-    "module": "./dist/pkg/esm/node/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
