--- a/packages/components/s-filtrable-input-component/package.json
+++ b/packages/components/s-filtrable-input-component/package.json
@@ -21,12 +21,12 @@
         "lit": "^2.2.5",
         "react": "^17.0.2"
     },
-    "main": "./dist/pkg/cjs/js/exports.js",
-    "module": "./dist/pkg/esm/js/exports.js",
+    "main": "dist/pkg/cjs/shared/exports.js",
+    "module": "dist/pkg/esm/shared/exports.js",
     "exports": {
         ".": {
-            "require": "./dist/pkg/cjs/js/exports.js",
-            "import": "./dist/pkg/esm/js/exports.js"
+            "require": "./dist/pkg/cjs/shared/exports.js",
+            "import": "./dist/pkg/esm/shared/exports.js"
         },
         "./shared/*": {
             "require": "./dist/pkg/cjs/shared/*.js",
