--- a/packages/core/s-docblock/package.json
+++ b/packages/core/s-docblock/package.json
@@ -16,8 +16,8 @@
         "find-in-files": "^0.5.0",
         "minimatch": "^3.0.4"
     },
-    "main": "./dist/pkg/cjs/shared/exports.js",
-    "module": "./dist/pkg/esm/shared/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
