--- a/packages/core/s-process/package.json
+++ b/packages/core/s-process/package.json
@@ -18,8 +18,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "stack-trace": "0.0.10"
     },
-    "main": "./dist/pkg/cjs/node/exports.js",
-    "module": "./dist/pkg/esm/node/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
