--- a/packages/core/s-promise/package.json
+++ b/packages/core/s-promise/package.json
@@ -12,8 +12,8 @@
         "@coffeekraken/s-log": "^2.0.0-alpha.9",
         "@coffeekraken/sugar": "^2.0.0-alpha.9"
     },
-    "main": "./dist/pkg/cjs/shared/exports.js",
-    "module": "./dist/pkg/esm/shared/exports.js",
+    "main": "dist/pkg/cjs/shared/exports.js",
+    "module": "dist/pkg/esm/shared/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/shared/exports.js",
