--- a/packages/dom/s-css-animate/package.json
+++ b/packages/dom/s-css-animate/package.json
@@ -14,12 +14,12 @@
     "dependencies": {
         "rematrix": "^0.7.2"
     },
-    "main": "./dist/pkg/cjs/js/exports.js",
-    "module": "./dist/pkg/esm/js/exports.js",
+    "main": "dist/pkg/cjs/shared/exports.js",
+    "module": "dist/pkg/esm/shared/exports.js",
     "exports": {
         ".": {
-            "require": "./dist/pkg/cjs/js/exports.js",
-            "import": "./dist/pkg/esm/js/exports.js"
+            "require": "./dist/pkg/cjs/shared/exports.js",
+            "import": "./dist/pkg/esm/shared/exports.js"
         },
         "./shared/*": {
             "require": "./dist/pkg/cjs/shared/*.js",
