--- a/packages/postcss/s-postcss-sugar-plugin/package.json
+++ b/packages/postcss/s-postcss-sugar-plugin/package.json
@@ -31,8 +31,8 @@
     "peerDependencies": {
         "postcss": "^8"
     },
-    "main": "./dist/pkg/cjs/node/exports.js",
-    "module": "./dist/pkg/esm/node/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
