--- a/packages/renderers/s-view-renderer/package.json
+++ b/packages/renderers/s-view-renderer/package.json
@@ -20,8 +20,8 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.9",
         "glob": "^8.0.3"
     },
-    "main": "./dist/pkg/cjs/node/exports.js",
-    "module": "./dist/pkg/esm/node/exports.js",
+    "main": "dist/pkg/cjs/node/exports.js",
+    "module": "dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
