--- a/packages/tools/s-timer/package.json
+++ b/packages/tools/s-timer/package.json
@@ -9,8 +9,8 @@
         "@coffeekraken/s-promise": "^2.0.0-alpha.9",
         "@coffeekraken/sugar": "^2.0.0-alpha.9"
     },
-    "main": "./dist/pkg/cjs/shared/exports.js",
-    "module": "./dist/pkg/esm/shared/exports.js",
+    "main": "dist/pkg/cjs/shared/exports.js",
+    "module": "dist/pkg/esm/shared/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/shared/exports.js",
